# alveare

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  alveare  dump_p0.py  install.sh  meta.json  requirements.txt
benchmarks/: README.md
benchmarks/reports/: 20260721-121458-93e073d.md  20260722-101911-ab97a58.md  20260722-113503-c4d6ec8.md  20260722-175703-4fa58b8.md  20260722-223400-7c67e12.md
docs/: HANDOFF-cpp-runtime.md  SETUP.md  architecture.md  background.md  cpp-runtime-plan.md  hardware.md  kernel-roofline.md  kernels.md  toolchain-setup.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-kernel-strategy.md  0003-m2-target-model.md  0004-python-first-runtime.md  0005-m5-target-model.md  0006-gemma4-bringup.md
docs/milestones/: M0-toolchain-validation.md  M1-quantized-matvec.md  M10-speed.md  M2-transformer-layer.md  M3-end-to-end-small-model.md  M4-scale-and-optimize.md  M5-gemma-bringup.md  M6-gemma4-layer.md  M7-gemma4-12b.md  M8-fidelity.md  M9-speed.md
kernels/: README.md
kernels/attention/: README.md  attention.cc  attention.py
kernels/ffn_fused/: ffn_accumulate_down.cc  ffn_compute_activation.cc  ffn_compute_gate_up.cc  ffn_finalize.cc  ffn_fused.cc  ffn_fused.py  ffn_init.cc  ffn_init_gate_up.cc
kernels/gemm_q/: gemm_q.cc  gemm_q.py  zero_kernel.cc
kernels/gemv_q/: README.md  gemv_q.cc  gemv_q.py  zero_kernel.cc
kernels/rmsnorm/: README.md  rmsnorm.cc  rmsnorm.py
kernels/rope/: README.md  rope.cc  rope.py
runtime/: README.md
runtime/cpp/: .gitignore  CMakeLists.txt
runtime/cpp/include/alveare/: bf16.h  config.h  generator.h  model.h  npu.h  npy.h  server.h  tokenizer.h  weights.h
runtime/cpp/src/: bf16.cpp  config.cpp  gemma_tokenizer.cpp  generator.cpp  main.cpp  model.cpp  npu.cpp  npy.cpp  server.cpp  tokenizer.cpp  weights.cpp
runtime/cpp/test/: layer_test.cpp  npu_smoke.cpp  parity_test.cpp
runtime/py/: layer.py  model.py  sampler.py  server.py  tokenizer_glue.py
tests/: README.md  gemma4_generation_test_results.txt  gemma_generation_test_results.txt  generation_test_results.txt  test_attention.py  test_cpu_only.py  test_ffn_fused.py  test_gemma4_generation.py  test_gemma4_global_layer.py  test_gemma4_layer.py  test_gemma_generation.py  test_gemma_layer.py  test_gemv_q.py  test_generation.py  test_layer.py  test_rmsnorm.py  test_rope.py
tests/bench/: bench_tensor_allocate.py  gemma4_profile.txt  gemv_q_bench.txt  profile_batched_prefill.py  profile_decode.py  profile_gemma4.py  run_bench.py  token_profile.txt
tests/integration/: test_server.py
tools/: README.md  build_gemm_mmul.sh  build_kernels.py  chat.py  check_npu.sh  detect_arch.py  dump_all_goldens.py  dump_gemv_golden.py  quantize_gemma.py  quantize_gemma4.py  quantize_model.py  verify_same_input.py
tools/convert/: gemv_q_convert.py  gguf_tokenizer.py
tools/ref/: gemv_q.py  generate_gemma4_reference.py  generate_gemma_reference.py  generate_llama_reference.py
